# CPP_Eindopdracht

./: .gitignore  .gitmodules  CPPClassDiagram.drawio  README.md  run.sh
Code/: CMakeLists.txt
Code/Resources/: kasteelruine.xml  kerkersendraken.db  test.xml
Code/inc/: FSConverter.h
Code/inc/BACKEND/: ConsumeerbaarObject.h  CustomUniquePtr.h  CustomVector.h  DatabaseLoader.h  GoudstukkenObject.h  Locatie.h  LocatieFactory.h  RandomEngine.h  Spelobject.h  SpelobjectFactory.h  Spelwereld.h  Vijand.h  VijandFactory.h  WapenObject.h  WapenrustingObject.h  XMLParser.h
Code/inc/FRONTEND/: Game.h  GebruikersInterface.h  Logger.h  Speler.h  SpelerActieHandler.h  SpelwereldFacade.h
Code/src/: FSConverter.cpp  main.cpp
Code/src/BACKEND/: ConsumeerbaarObject.cpp  CustomUniquePtr.tpp  CustomVector.tpp  DatabaseLoader.cpp  GoudstukkenObject.cpp  Locatie.cpp  LocatieFactory.cpp  RandomEngine.cpp  Spelobject.cpp  SpelobjectFactory.cpp  Spelwereld.cpp  Vijand.cpp  VijandFactory.cpp  WapenObject.cpp  WapenrustingObject.cpp  XMLParser.cpp
Code/src/FRONTEND/: Game.cpp  Gebruikersinterace.cpp  Logger.cpp  Speler.cpp  SpelerActieHandler.cpp  SpelwereldFacade.cpp
Code/test/: CMakeLists.txt  test_consumeerbaarobject.cpp  test_customvector.cpp  test_dbloader.cpp  test_goudstukkenobject.cpp  test_locatie.cpp  test_locatiefactory.cpp  test_speler.cpp  test_spelobjectfactory.cpp  test_spelwereld.cpp  test_vijand.cpp  test_vijandfactory.cpp  test_wapenobject.cpp  test_wapenrustingobject.cpp  test_xmlparser.cpp
